--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/PatrickCraveiro/api-em-typescript#readme",
   "dependencies": {
     "git-commit-msg-linter": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.42",
+    "typescript": "^4.7.3"
   }
 }
