--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/PatrickCraveiro/api-em-typescript#readme",
   "dependencies": {
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "git-commit-msg-linter": "^4.1.3"
   },
   "devDependencies": {
