--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.1",
     "typescript": "^4.7.3"
   }
 }
