--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Colocando em pratica ensinamentos do curso:  https://www.udemy.com/course/tdd-com-mango",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,12 @@
     "git-commit-msg-linter": "^4.1.3"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.42",
     "husky": "^8.0.1",
+    "jest": "^28.1.1",
     "lint-staged": "^13.0.1",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.7.3"
   }
 }
