--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Colocando em pratica ensinamentos do curso:  https://www.udemy.com/course/tdd-com-mango",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "jest": "^28.1.1",
     "lint-staged": "^13.0.1",
     "ts-jest": "^28.0.4",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
 }
